src/shared/ui/Drawer/Drawer.module.scss
.Drawer {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  display: flex;
  opacity: 0;
  pointer-events: none;
}

.overlay {
  width: 100%;
  width: 100%;
}

.content {
  position: absolute;
  top: 26px;
  right: 0;
  width: 100%;
  height: calc(100% - 26px);
  background: var(--submenu-bg);
  border-radius: 10.5px 10.5px 0 0;
  box-shadow: 0 0 15px var(--submenu-shadow), 0 0 0 1px var(--submenu-border);
  transform: translateY(102%);
  transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
  opacity: 0;
  overflow: hidden;
  color: var(--main-text-color);
  user-select: none;
}

.opened {
  pointer-events: all;
  z-index: var(--modal-z-index);
  opacity: 1;
  & .content {
    transform: translateY(0);
    opacity: 1;
  }
}
.isClosing {
  & .content {
    transform: translateY(102%);
  }
}
.header {
  display: flex;
  align-items: center;
  height: 55px;
  padding: 20px;
}
.closeBtn {
  width: 13.13px;
  height: 13.13px;
}
.closeBtnIcon {
  fill: var(--close-modal-icon-fill);
  display: flex;
  scale: 1.01;
}

